# parallel-hashmap

./: #README.md#  .appveyor.yml  .gitattributes  .gitignore  .travis.yml  BENCHMARK.md  CITATION.cff  CMakeLists.txt  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  bench.cc  charts-template.html  index.html  make_chart_data.py  phmap.natvis  phmap_gdb.py  phmap_lldb.py  style.css  travis  vendor.yml
.github/workflows/: linux.yml  macos.yml  main.yml  windows.yml
benchmark/: Makefile  bench.cc  make_chart_data.py
cmake/: CMakeLists.txt.in  DownloadGTest.cmake  helpers.cmake  phmap.cmake
diagrams/: index_computation
doc/: new_release.md
examples/: allmaps.cc  basic.cc  bench.cc  btree.cc  custom_pointer.cc  dump_load.cc  dump_nested.cc  emplace.cc  hash.cc  hash_bench.cc  hash_std.cc  hash_std.h  hash_value.h  insert_bench.cc  knucleotide.cc  lazy_emplace_l.cc  lill4map.cc  llil.cc  llil4map.cc  matt.cc  mt_word_counter.cc  p_bench.cc  pmr.cc  serialize.cc  serialize_compare.cc
examples/llil_utils/: gen-llil.pl  gen_files  run_llil4map  shuffle.pl
html/: Lookup.html  Makefile  parallel_hashmap.html  parallel_hashmap.md
parallel_hashmap/: BUILD  btree.h  conanfile.py  meminfo.h  phmap.h  phmap_base.h  phmap_bits.h  phmap_config.h  phmap_dump.h  phmap_fwd_decl.h  phmap_primes.h  phmap_utils.h
pdf/: Makefile  parallel_hashmap.html  template.html
pdf/css/: style.css
results/: output_flat_par_mutex_4  output_mt_stl_flat_par_run2  output_stl_flat_par  output_various_N
tests/: #unordered_map_constructor_test.h#  btree_test.cc  btree_test.h  compressed_tuple_test.cc  container_memory_test.cc  dump_load_test.cc  erase_if_test.cc  flat_hash_map_test.cc  flat_hash_set_test.cc  hash_generator_testing.h  hash_policy_testing.h  hash_policy_testing_test.cc  hashtable_debug.h  node_hash_map_test.cc  node_hash_policy_test.cc  node_hash_set_test.cc  parallel_flat_hash_map_mutex_test.cc  parallel_flat_hash_map_test.cc  parallel_flat_hash_set_test.cc  parallel_hash_map_test.cc  parallel_hash_set_test.cc  parallel_node_hash_map_test.cc  raw_hash_set_allocator_test.cc  raw_hash_set_test.cc  tracked.h  unordered_map_constructor_test.h  unordered_map_lookup_test.h  unordered_map_members_test.h  unordered_map_modifiers_test.h  unordered_set_constructor_test.h  unordered_set_lookup_test.h  unordered_set_members_test.h  unordered_set_modifiers_test.h
